src/test/deca/context/valid/comparaisons.deca

// Description :
// Comparaisons sur int/float
//
// Resultats :
// ok
//
{
  boolean c1;
  boolean c2;
  boolean c3;
  c1 = (1 < 2);
  c2 = (1.5 >= 2.8);
  c3 = (1 >= 2.8);

}

