src/test/deca/context/invalid/int_with_float.deca

// Description :
// Initialisation int avec un float
//
// Resultats :
// Erreur contextuelle
//incompatibilité de type : int <- float
//

{
  int x = 2.5;
}